--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "pretest": "npm run eslint && npm run htmlhint",
     "test": "jest --verbose --coverage",
     "open-coverage-report": "opener ./coverage/lcov-report/index.html",
-    "start": "server src/",
+    "start": "serve src/",
     "deploy": "gh-pages -d src"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "babel-jest": "^27.0.1",
-    "eslint": "^8.3.0",
+    "connect": "^3.7.0",
+    "eslint": "^8.43.0",
     "gh-pages": "^3.1.0",
     "htmlhint": "^1.0.0",
     "jest": "^27.0.1",
